# Kria-Photonics_Lab

./: .gitignore  BUTTERFLY_LASER_DRIVER_MANUAL.md  README.md  WINDOWS_CODEX_TAURI_GUI_AND_SERVER_GUIDE.md  WORK_SESSION_HANDOFF.md  butterfly_laser_control.py  butterfly_laser_panel.html  butterfly_laser_server.py  butterfly_laser_server_tauri.py  codex_linux_sync_20260625_101001.patch  pa_debug.py  pa_imaging_capture.py  plot_lock_recording.py  start_tauri_control_console.sh  upload_debug.sh  upload_pl.sh
.github/workflows/: tauri-release.yml
board_payload/: README.md  axis-capture-superblock.ko  pl.dtbo
docs/: PACKAGING.md
legacy_web_gui_2026-06-20/: butterfly_laser_control.py  butterfly_laser_panel.html  butterfly_laser_server.py
milestones/project_release_20260629_handoff/: README.md
milestones/vivado_warning_cleanup_20260626_180839/: README.md  warning_category_summary.generated.md  warning_repair_decision_points.md  warning_triage_current.md
script/: reset_all.sh
tauri_control_console/: index.html  package-lock.json  package.json  tsconfig.json
tauri_control_console/src-tauri/: Cargo.toml  tauri.conf.json
tauri_control_console/src-tauri/capabilities/: default.json
tauri_control_console/src-tauri/icons/: icon.icns
tauri_control_console/src-tauri/src/: main.rs  pa_image.rs  pa_stream.rs  storage.rs
tests/: test_ada4355_raw_buffer.py  test_board_acquire.py  test_pa_imaging_capture.py  test_panel_click_to_lock.py  test_plot_lock_recording.py  test_tauri_server_defaults.py  test_tauri_server_sse.py  test_tec_target_ramp.py
(+322 files in other folders)
