[package]
name = "butterfly_laser_control_console"
version = "0.1.0"
description = "Butterfly Laser Driver control console"
authors = ["Butterfly Laser Driver"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
